[gd_scene load_steps=12 format=3 uid="uid://d1mx8gujjbtlg"]

[ext_resource type="Texture2D" uid="uid://d06nd5rpr6vm4" path="res://attacks/Twirl-Anim.png" id="1_6rvwo"]
[ext_resource type="Script" path="res://scripts/blissey.gd" id="1_ucpru"]
[ext_resource type="Texture2D" uid="uid://cnvaglo60vvkx" path="res://attacks/blissey_heal_pulse.png" id="2_87fqd"]
[ext_resource type="FontFile" uid="uid://ck6f0v3yk0xf4" path="res://assets/m5x7.ttf" id="4_rqs7c"]
[ext_resource type="Script" path="res://scenes/HealthDisplay.gd" id="5_3fj0c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfunb"]
size = Vector2(12.5, 12.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0dqhq"]
size = Vector2(18, 18)

[sub_resource type="Animation" id="Animation_uf7xw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("twirl:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HealPulse/CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.01]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("heal_pulse:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8siqa"]
resource_name = "twirl"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("twirl:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HealPulse/CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.01, 0.01, 6.74, 20.22, 33.7, 39.63, 33.2, 20.39, 0.01]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("heal_pulse:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i8pav"]
_data = {
"RESET": SubResource("Animation_uf7xw"),
"twirl": SubResource("Animation_8siqa")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_w7re4"]
radius = 0.01

[node name="Blissey" type="StaticBody2D"]
z_index = 2
position = Vector2(0, 2)
collision_layer = 32
collision_mask = 41
script = ExtResource("1_ucpru")
heal = 15
structure_heal = 15
health = 100
max_health = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("RectangleShape2D_xfunb")

[node name="heal_pulse" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_87fqd")
hframes = 9

[node name="twirl" type="Sprite2D" parent="."]
texture = ExtResource("1_6rvwo")
hframes = 9
vframes = 8

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(-2.09808e-05, -4)
rotation = 1.5708
shape = SubResource("RectangleShape2D_0dqhq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i8pav")
}

[node name="HealPulse" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealPulse"]
shape = SubResource("CircleShape2D_w7re4")

[node name="Attack_Cooldown" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="HealthDisplay" type="Label" parent="."]
z_index = 3
anchors_preset = 10
anchor_right = 1.0
offset_left = -10.0
offset_top = -33.0
offset_right = 14.0
offset_bottom = -9.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0980392, 0.74902, 0, 0.615686)
theme_override_fonts/font = ExtResource("4_rqs7c")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
script = ExtResource("5_3fj0c")

[node name="DisplayTimer" type="Timer" parent="HealthDisplay"]
wait_time = 0.25
one_shot = true

[connection signal="area_entered" from="CollisionArea" to="." method="_on_collision_area_area_entered"]
[connection signal="area_exited" from="CollisionArea" to="." method="_on_collision_area_area_exited"]
[connection signal="timeout" from="Attack_Cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="HealthDisplay/DisplayTimer" to="HealthDisplay" method="_on_display_timer_timeout"]
